@@ -4,7 +4,7 @@
   Copyright (C) 2006,2007 Geoffrey R. Hutchison
   Copyright (C) 2006,2007 Donald Ephraim Curtis
   Copyright (C) 2007      Benoit Jacob
-  Copyright (C) 2007 Marcus D. Hanwell
+  Copyright (C) 2007,2008 Marcus D. Hanwell
 
   This file is part of the Avogadro molecular editor project.
   For more information, see <http://avogadro.sourceforge.net/>
@@ -1501,14 +1501,14 @@ namespace Avogadro {
     d->stable = stable;
   }
 
-  void GLWidget::setSelected( PrimitiveList primitives, bool select )
+  void GLWidget::setSelected(PrimitiveList primitives, bool select)
   {
-    foreach( Primitive *item, primitives ) {
-      if ( select && !d->selectedPrimitives.contains( item ) ) {
+    foreach( Primitive *item, primitives )
+    {
+      if (select && !d->selectedPrimitives.contains(item))
           d->selectedPrimitives.append( item );
-      } else {
+      else if (!select)
         d->selectedPrimitives.removeAll( item );
-      }
       item->update();
     }
   }
